UPDATE (elements following Style guide)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Hey, it's me Silvia! 👋 I'm a Front-end developer based in Barcelona 🇪🇸. Welcome to my world! 🌎">
+    <meta name="description" content="Hey, it's me Silvia! 👋 I'm a Front-end developer based in Tokyo 🇯🇵. Welcome to my world! 🌎">
     <link rel="stylesheet" href="/main.css">
     <script src="../js/preload.js"></script>
     <script src="../js/script.js" async></script>
