--- a/_sass/_notfound.scss
+++ b/_sass/_notfound.scss
@@ -2,7 +2,7 @@
   margin: 10% auto;
   max-width: 600px;
   text-align: center;
-  background: $medium-blue;
+  background: $main-blue;
   padding: 10% 5%;
   .border {
     border: 2px solid white;
@@ -20,7 +20,7 @@
     padding: 3%;
     text-decoration: none;
     background: white;
-    color: $light-brown;
+    color: $black;
     border-radius: 1.5em;
   }
 }
