--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -1,32 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Mr+Dafoe&family=Roboto:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-$dark-brown: #444440;
-$light-brown: #757570;
-$dark-blue: #A9B1B0;
-$medium-blue: #B9C9C7;
-$light-blue: #DBE7E5;
-$dark-cream: #F3E8DA;
-$light-cream: #F9F4EC;
+$black: #000000;
+$white: #ffff;
+$main-blue: #B6DEED;
 $gray: #CACAC3;
-$green: #E6ECDA;
 
 body {
   margin: 0;
-  background: $dark-cream;
-  color: $dark-brown;
+  background: $white;
+  color: $black;
+  font-family: "Montserrat", Arial, sans-serif;
   h1 {
-    font-family: "PT Serif", Georgia, serif;
+    font-family: "IBM Plex Mono", Georgia, serif;
     font-weight: 400;
   }
   p {
-    font-family: "PT Sans", Arial, sans-serif;
+    font-family: "Montserrat", Arial, sans-serif;
     font-weight: 400;
   }
   a {
     text-decoration: none;
   }
   #preloader {
-    background: $dark-cream url(../assets/images/preloader.gif) no-repeat center center;
+    background: white url(../assets/images/preloader.gif) no-repeat center center;
     height: 100vh;
     width: 100%;
     position: fixed;
