--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -1,24 +1,24 @@
 #contact {
-  background: $green;
+  background: $white;
   position: relative;
   .contact-header-container {
-    background: $green;
+    background: $white;
     position: absolute;
     width: 100%;
     top: -25vw;
     .contact-header {
-      padding: 5% 10%;
+      padding: 5% 5%;
       z-index: -1;
       h1 {
-        font-family: "PT Serif";
+        font-family: "Montserrat";
         font-weight: 700;
-        font-size: 6.5vw;
+        font-size: 6vw;
         margin: 0;
         margin-bottom: 10%;
-        color: $light-brown;
+        color: $gray;
       }
       .contact-header-line2 {
-        color: $medium-blue;
+        color: $main-blue;
         position: absolute;
         margin: 0;
         width: 53vw;
@@ -27,8 +27,8 @@
       }
       .contact-circle {
         position: absolute;
-        top: 3vw;
-        left: 20vw;
+        top: 5vw;
+        left: 15vw;    
         width: 20vw;
       }
     }
@@ -37,14 +37,14 @@
     position: relative;
     z-index: 2;
     width: 100%;
-    background: $light-cream;
+    background: $main-blue;
     border-radius: 17vw 17vw 0 0;
     min-height: 60vh;
     padding-bottom: 5%;
     h3 {
       font-weight: 300;
-      font-size: 3vw;
-      color: $light-brown;
+      font-size: 2.5vw;
+      color: $black;
     }
     .email-box {
       position: relative;
@@ -54,6 +54,7 @@
         right: 15vw;
         text-align: right;
         margin-bottom: 5%;
+        color: $white;
       }
       .underline-email {
         position: absolute;
@@ -64,22 +65,28 @@
       .email {
         display: flex;
         border-radius: 20px;
-        border: solid 1px $medium-blue;
+        border: solid 2px $white;
         width: 26vw;
         padding: 0 0 0 5vw;
-        color: $light-brown;
+        color: $black;
         position: relative;
         left: 15vw;
+        padding: 0 2vw;
+        transition: transform 0.2s ease-in;
+        &:hover {
+          transform: scale(1.2);
+        }
         .email-icon {
           align-self: center;
-          margin-right: 1vw;
+          margin: 1vw;
           width: 3vw;
         }
         h4 {
           align-self: center;
-          font-family: "PT Sans";
+          font-family: "Montserrat";
           font-weight: 300;
           font-size: 1.8vw;
+          color: $white;
         }
       }
       .contact-arrow1 {
@@ -104,9 +111,14 @@
         position: relative;
         left: 14vw;
         width: 50%;
+        color: $white;
       }
       svg {
         width: 7vw;
+        transition: transform 0.2s ease-in;
+        &:hover {
+          transform: scale(1.2);
+        }
       }
       .contact-icons {
         display: flex;
@@ -132,13 +144,18 @@
     .circle-cv {
       position: absolute;
       top: 5.5vw;
-      right: 32vw;
+      right: 28.5vw;
       width: 5vw;
+      transition: transform 0.2s ease-in;
+      &:hover {
+        transform: scale(1.2);
+      }
     }
     h4 {
-      font-size: 2vw;
+      font-family: "IBM Plex Mono";
+      font-size: 1.7vw;
       font-weight: 300;
-      color: $light-brown;
+      color: $black;
       text-align: center;
       padding: 10%;
       background: white;
@@ -147,13 +164,13 @@
   .footer {
     text-align: center;
     p {
-      font-family: "PT Serif";
+      font-family: "Montserrat";
       font-weight: 700;
       font-size: 1em;
-      color: $dark-blue;
+      color: $white;
     }
     span {
-      color: $light-brown;
+      color: $black;
     }
   }
 }
@@ -163,20 +180,20 @@
     top: -5vw;
     .contact-info-container {
       min-height: 0;
-      padding-bottom: 1em;
+      padding: 1em 0;
       h3 {
         font-size: 5vw;
       }
       .email-box {
         width: 99%;
         .underline-email {
-          top: 10vw;
-          right: 13vw;
-          width: 13vw;
+          top: 11vw;
+          right: 3vw;
+          width: 19vw;
         }
         .email {
           border-radius: 5px;
-          width: 35vw;
+          width: 41vw;
           padding: 0 5vw 0 3.5vw;
           margin: 0;
           top: 3vw;
@@ -186,7 +203,7 @@
           }
           h4 {
             align-self: center;
-            font-family: "PT Sans";
+            font-family: "Montserrat";
             font-weight: 300;
             font-size: 3vw;
           }
@@ -202,9 +219,10 @@
         margin-bottom: 5%;
         width: 98%;
         .underline-sns {
-          top: 10vw;
-          left: 53vw;
-          width: 30vw;
+          top: 11vw;
+          left: 57vw;
+          width: 34vw;
+          height: auto;
         }
         h3 {
           left: 10vw;
