--- a/_sass/_works.scss
+++ b/_sass/_works.scss
@@ -56,6 +56,7 @@
       position: absolute;
       bottom: 20px;
       right: 20px;
+      z-index: 1;
       opacity: 0;
       text-decoration: none;
       color: white;
